--- a/index - Copy.html
+++ b/index - Copy.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta ucharset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Paccel</title>
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
+    <!-- Favicon 
+    <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <!-- Font Awesome -->
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
@@ -56,7 +56,7 @@
 
 <body>  
 
-  <!-- BEGAIN PRELOADER -->
+  <!-- BEGIN PRELOADER -->
   <div id="preloader">
     <div id="status">&nbsp;</div>
   </div>
@@ -76,7 +76,7 @@
                 <li>
                   <div class="mail">
                     <i class="fa fa-envelope"></i>
-                    fpgacompiler@gmail.com
+                    hkverma@paccel.com
                   </div>
                 </li>
                 <li>
@@ -119,15 +119,15 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="products.html">Products</a></li>
-                <li><a href="technology.html">Technology</a></li>
-                <li><a href="software.html">Software</a></li>
-                <li><a href="applications.html">Applications</a></li>
+                <li><a href="undercons.html">Technology</a></li>
+                <li><a href="undercons.html">Software</a></li>
+                <li><a href="undercons.html">Applications</a></li>
               </ul>
             </li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="undercons.html">Support</a></li>
+            <li><a href="undercons.html">Blogs</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="careers.html">Careers</a></li>
+            <li><a href="undercons.html">Careers</a></li>
           </ul>                     
         </div><!--/.nav-collapse -->
       </div>     
@@ -244,7 +244,6 @@
 <!--  Add when ready with the links
      <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-pinterest"></i></a> -->
           </div>
         </div>
