--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li>
                   <div class="mail">
                     <i class="fa fa-envelope"></i>
-                    fpgacompiler@gmail.com
+                    paccelinc@gmail.com
                   </div>
                 </li>
                 <li>
